# government_salary

./: .gitignore  BACKEND-FUNCTIONAL-TESTING.md  BENCH-READINESS.md  ENGINE-BOUNDARIES.md  FINANCIAL-WIRING-AUDIT.md  FRONTEND-FEATURE-GAPS.md  FRONTEND-INTEGRATION-TESTING.md  PHASE-1.md  PHASE-2-PLAN.md  PHASE-3.md  PRODUCTION-BLOCKERS-FIX.md  PRODUCTION-READINESS-AUDIT.md  PROJECT-STATUS.md  README.md  UAT-DEMO-CYCLE.md  UAT-FLOW.md
backend/iraqi_government_payroll/: MANIFEST.in  README.md  license.txt  pyproject.toml
backend/iraqi_government_payroll/iraqi_government_payroll/: hooks.py  modules.txt  patches.txt
backend/iraqi_government_payroll/iraqi_government_payroll/api/: accounting_api.py  payroll_api.py  reports_api.py  slip_api.py
backend/iraqi_government_payroll/iraqi_government_payroll/demo/: seed.py
backend/iraqi_government_payroll/iraqi_government_payroll/fixtures/: allowance_rule.json  annual_increment_rule.json  geographic_area.json  government_grade.json  government_payroll_settings.json  government_rule_set.json  government_salary_scale.json  income_tax_bracket.json  pension_rule.json  promotion_rule.json  qualification_appointment_rule.json  role.json  tax_allowance_rule.json
backend/iraqi_government_payroll/iraqi_government_payroll/smoke/: checks.py
backend/iraqi_government_payroll/iraqi_government_payroll/tests/: test_accounting.py  test_active_salary.py  test_api_governance.py  test_authorization.py  test_family.py  test_financial_wiring.py  test_governance.py  test_governance_log.py  test_grade.py  test_hardening.py  test_lifecycle.py  (+11 more)
(+188 files in other folders)
